--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,26 +1,80 @@
-# Nombre del flujo de trabajo
-name: Deploy to Firebase Hosting
+name: Scan, Lint, Test, and Deploy to Firebase
 
-# Define cuándo se ejecutará la acción
 on:
   push:
-    branches:
-      - main  # Se ejecuta cada vez que haces push a la rama 'main'
+    branches: [main]
+  pull_request:
+    types: [opened, synchronize]
 
 jobs:
-  build_and_deploy:
-    runs-on: ubuntu-latest # Se ejecuta en un servidor virtual con Ubuntu
-
+  scan:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
     steps:
-      # 1. Clona tu repositorio en el servidor virtual
       - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # 2. Configura la acción para desplegar en Firebase
-      - name: Deploy to Firebase Hosting
-        uses: FirebaseExtended/action-hosting-deploy@v0
+        uses: actions/checkout@v4
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_ANALIZADORMELATERETRO }}
-          channelId: live
-          projectId: analizadormelateretro
+          languages: javascript, python
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+
+  test_and_lint:
+    name: Test and Lint
+    runs-on: ubuntu-latest
+    needs: scan
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Frontend Dependencies
+        run: npm install
+
+      - name: Run Frontend Linting
+        run: npm run lint
+
+      - name: Run Frontend Tests
+        run: npm test
+
+      - name: Install Backend Dependencies
+        # Assumes your python functions are in a 'functions' directory
+        run: pip install -r functions/requirements.txt
+      
+      - name: Run Backend Linting (e.g., flake8)
+        run: flake8 functions/ --count --select=E9,F63,F7,F82 --show-source --statistics
+      
+      - name: Run Backend Tests (e.g., pytest)
+        run: pytest functions/
+
+  deploy_production:
+    name: Deploy to Firebase
+    runs-on: ubuntu-latest
+    needs: test_and_lint
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Firebase
+        uses: WPMedia/firebase-actions@v0.13.0
+        with:
+          token: ${{ secrets.FIREBASE_TOKEN }}
+          project_id: ${{ secrets.FIREBASE_PROJECT_ID }}
+      - name: Deploy to Firebase
+        run: firebase deploy --only hosting,functions --project ${{ secrets.FIREBASE_PROJECT_ID }} --force
